- Added support for SystemSettings (Alex Fenton)
- Tweaked ComboBox constructor to fix cases where it got confused about 
  which parameter was which (Kevin Smith)
- Re-add typemap in FileDialog, so get_filenames and get_paths will work 
  (thanks to Roy Sutton)
- Many grid-related improvements, including adding GridCellCoords (Sean Long) 
- Improvements to the typemaps, reducing warnings (Roy Sutton)
- Applied a test patch (to the TODO file) submitted via darcs (Sean Long)
  

====0.0.30 tag included all of this:===
- Enabled directors in these classes so they wouldn't crash during garbage 
  collection:  BitmapButton, Bitmap, ControlWithItems, Cursor, DC, Event, 
  FontDialog, Font, GridCellEditor, GridCellRenderer, Image, Pen, Sizer, 
  TipProvider
- Added back BU_XXX constants that were lost in a recent RubyConstants change
- Fixed samples/minimal/text.rb to require 'wx' (Sean Long)
- Added another DC#draw_spline (Roy Sutton)
- Fixes to bigdemo MDI sample to work on MS Windows (Roy Sutton)
- Fixes to get_text_extent in DC, WindowDC, Window (Roy Sutton)
- Fix to bigdemo Notebook sample (Roy Sutton)
- Fixes to evt_menu_range (Roy Sutton)
- Fix to bigdemo wxScrolledWindow to avoid crashing on Linux
- Omit FontDialog.new(window) from Mac to avoid compile error
- Many fixes to grid-related classes (Sean Long)
- Added TextValidator and related constants; tweak Validator (Sean Long)
- Added Rect class (Roy Sutton)
- Added Timer and TimerEvent classes (Roy Sutton)
- Added TreeCtrl icons (Roy Sutton)
- Avoid MS Windows compile warning by removing definition of CURSOR_DEFAULT
  (Roy Sutton)
- Added ImageList constants (Roy Sutton)
- Added typemap for StatusBar so get_field_rect will work (Roy Sutton)
- Enabled Window#get_font, which helps bigdemo work better (Roy Sutton)
- Enabled several platform-specific methods to MenuItem (Roy Sutton)
- Enabled Window#RegisterHotKey on MS Windows (Roy Sutton)
- Added several missing methods in SplitterWindow (Roy Sutton)