@@ -1,3 +1,4 @@
+- Added cool text sample: samples/text/textctrl.rb (Alex Fenton)
 - Added support for SystemSettings (Alex Fenton)
 - Tweaked ComboBox constructor to fix cases where it got confused about 
   which parameter was which (Kevin Smith)
